--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="ASSETS/CSS/reset.css">
     <link rel="stylesheet" href="ASSETS/CSS/style.css">
 
@@ -17,6 +18,7 @@
 
 <body>
     <div class="container">
+        <button class="btn"><i class="fa fa-calendar" aria-hidden="true"></i>Search Parameters</button>
         <div>
             <form action="/action_page.php">
                 <label for="searchTerm">Search Term: </label>
@@ -34,6 +36,8 @@
                 <input type="submit" value="Submit">
 
             </form>
+            <button class="btn"><i class="fa fa-bars" aria-hidden="true"></i>Search </button>
+            <button class="btn"><i class="fa fa-trash" aria-hidden="true"></i>Clear Results</button>
         </div>
     </div>
 
